--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "description": "a really cool game",
   "version": "1.0.0",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
+    "nodemon": "^3.1.3",
     "ws": "^8.17.0"
   }
 }
